--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules
+dist
+.capacitor
+android/local.properties
+android/.gradle
+android/build
+android/app/build
+android/app/src/main/assets/public
+ios/App/Pods
+ios/App/build
+ios/App/App/public
